<resources>
    <string name="app_name">My Application</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="passwordrepeat">Password Repeat</string>
    <string name="passworderror">Passwords not the same</string>
    <string name="sign_in">Sig In</string>
    <string name="sign_out">Sign Out</string>
    <string name="create_account">Create Account</string>
    <string name="Create_Issue">Create Issue</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
